--- a/Daytwo.html
+++ b/Daytwo.html
@@ -37,7 +37,7 @@
                     <h3>FAQ SECTION</h3>
                 <div class="underLine">
                     <div class="line"></div>
-                    <div id="circle"></div>
+                    <div class="circle"></div>
                     <div class="line"></div>
                 </div>
                 </div>
@@ -89,7 +89,7 @@
                     <h3>FAQ SECTION</h3>
                 <div class="underLine">
                     <div class="line"></div>
-                    <div id="circle"></div>
+                    <div class="circle"></div>
                     <div class="line"></div>
                 </div>
                 </div>
@@ -141,6 +141,7 @@
                         </tr>
                     </tfoot>
                 </table>
+            </div>
             </div>
         </section>
     </main>
