--- a/Daytwo.html
+++ b/Daytwo.html
@@ -12,10 +12,13 @@
         <nav>
             <h1>Logo</h1>
             <div class="links">
-                <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Blogs</a>
-            <a href="#">Contact</a>
+                <ul >
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Blogs</li>
+                    <li>Contact</li>
+                </ul>
+                
             </div>
             
             <div  class="numbers">
@@ -97,10 +100,10 @@
                 <table>
                     <thead>
                         <tr>
-                            <td>Item/Desc</td>
-                            <td>Qty.</td>
-                            <td>@</td>
-                            <td>Price</td>
+                            <th>Item/Desc</th>
+                            <th>Qty.</th>
+                            <th>@</th>
+                            <th>Price</th>
                         </tr>
                     </thead>
                     <tbody>
